--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -52,13 +52,10 @@ completeness_text <-
       paste0("Data for ", sel_fy, " are now final and will not change in ",
              "future versions of this report."),
     complete_year == FALSE ~ 
-      paste0("As PDS for some referrals in ", sel_fy, " is still ",
-             "ongoing, it is not known yet whether or not they ",
-             "will meet the LDP standard. Therefore, the figures ",
-             "shown are currently provisional and subject to ",
-             "change in future versions of this report.", "<br>",
-             "LDP Standard performance figures are not provided ",
-             "until data is available for the full financial year."),
+      paste0("LDP Standard performance figures are not provided ",
+             "until data is available for the full financial year. ",
+             "The figures shown are currently provisional and subject to ",
+             "change in future versions of this report."),
     TRUE ~ 
       paste0("As PDS for some referrals in ", sel_fy, " is still ",
              "ongoing, it is not known yet whether or not they ",
@@ -176,7 +173,7 @@ est_date4 <- dmy(01042024)
               "*PHS have identified some records submitted by NHS Lanarkshire, NHS Borders and NHS Fife ", 
               "for 2024/25 that show inconsistent dates. The reported dates resulted in these records ",
               "showing as having met the standard. PHS have queried the ", 
-              "dates with the Health Boards and are awaiting a response.*"), 
+              "dates with the Health Boards and are expecting these to be rectified in future submissions.*"), 
             TRUE ~ paste0(""))
    
  
