--- a/publication/markdown/report.Rmd
+++ b/publication/markdown/report.Rmd
@@ -5,8 +5,8 @@ output:
     fig_caption: no
     cover_page: "/conf/dementia/A&I/Outputs/publication/templates/phs-offstats-cover.docx"
     cover_title: "Dementia Post-Diagnostic Support"
-    cover_subtitle: "Local Delivery Plan Standard - Figures to 2021/22"
-    cover_date: "26/03/2024"
+    cover_subtitle: "Local Delivery Plan Standard - Figures to 2022/23"
+    cover_date: "29/07/2025"
     toc_depth: 3
 ---
 ```{r TableData, include = FALSE}
@@ -495,6 +495,12 @@ prov_footnote <-
   paste("Figures for", latest_fy, "are provisional subject to all",
         "service users completing their support.")
 
+prov_revised_footnote <- 
+  paste("Figures for", latest_fy, "are provisional subject to all",
+        "service users completing their support. ",
+        "Figures for", revised_fy, "have been revised (^R^) and are",
+        "now final.")
+
 revised_footnote <-
   paste("Figures for", revised_fy, "have been revised (^R^) and are",
         "now final.")
@@ -505,20 +511,20 @@ revised_footnote <-
 # Retain code for records
 ###
 
-# a_city_footnote_hb <-
-#   paste("The 2020/21 figures do not include Aberdeen City. Their figures are ",
-#         "affected by a change in service provision of PDS during 2019 that ",
-#         "has resulted in data quality issues. This will impact on the figures ",
-#         "for NHS Grampian and Scotland.",
-#         "See [Appendix 1](#reporting) for further information.")
-#         
-# a_city_footnote_ijb <-
-#   paste("The total number of people referred to PDS in Aberdeen City for 2020/21 is ",
-#         "included in the table, however there are no LDP standard figures shown. ", 
-#         " This is due to a change during 2019 to the PDS service provided ", 
-#         "by Aberdeen City which has resulted in data quality issues. ",
-#         "See [Appendix 1](#reporting) for further information.")
-#     
+a_city_footnote_hb <-
+  paste("The 2019/20 and 2020/21 figures do not include Aberdeen City. Their figures are ",
+        "affected by a change in service provision of PDS during 2019 that ",
+        "has resulted in data quality issues. This will impact on the figures ",
+        "for NHS Grampian and Scotland.",
+        "See [Appendix 1 - Background Information](#reporting) for further information.")
+
+a_city_footnote_ijb <-
+  paste("Aberdeen City figures for 2019/20 and 2020/21 are not available. Although ",
+        "the total number of people referred to PDS in Aberdeen City is known, due to ",
+        "data quality issues it is not possible to calculate the percentage of people that ",
+        "received a minimum of one year’s support. ",
+        "See [Appendix 1 - Background information](#reporting) for further information.")
+
 # 
 # a_city_footnote_general <-
 #   paste("Aberdeen City are excluded from this chart due to data quality issues.",
@@ -527,22 +533,20 @@ revised_footnote <-
 ##
 
 incidence_footnote <-
-  paste0("The estimated number of people newly diagnosed with dementia is ",
-        "subject to the limitations detailed within the [Estimated and ",
+  paste0("The estimated number of people newly diagnosed with dementia ",
+        "has been calculated using the rates referenced in the [Estimated and ",
         "Projected Diagnosis Rates for Dementia in Scotland: 2014-2020]",
-        "(https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/) publication. ",
-        "Estimates for calendar year ", str_sub(latest_fy, 1, 4),
-        " have been used.")
+        "(https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/) publication ",
+        "and National Records of Scotland (NRS) mid-", str_sub(latest_fy, 1, 4),
+        " population estimates.")
 
 incidence_footnote_trend <-
-  paste0("The estimated number of people newly diagnosed with dementia is ",
-        "subject to the limitations detailed within the [Estimated and ",
+   paste0("The estimated number of people newly diagnosed with dementia ",
+        "has been calculated using the rates referenced in the [Estimated and ",
         "Projected Diagnosis Rates for Dementia in Scotland: 2014-2020]",
-        "(https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/) publication. ",
-        "Estimates are used as follows: calendar year 2016 estimates for 2016/17, ",
-        "calendar year 2017 estimates for 2017/18, calendar year 2018 estimates ", 
-        "for 2018/19, calendar year 2019 estimates for 2019/20 and calendar year ",
-        "2020 estimates for 2020/21.")
+        "(https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/) publication ",
+        "and National Records of Scotland (NRS) mid-", as.character(as.numeric(str_sub(latest_fy, 1, 4))-1),
+        " and mid-", str_sub(latest_fy, 1, 4), " population estimates.")
 
 method_footnote <-
   paste("For detailed information on how the percentage of LDP standard",
@@ -573,14 +577,23 @@ simd_footnote <- glue(
   "small number of records (16) where it was not possible to assign ", 
   "deprivation category based on the postcode information available.")
 
-interpretation_text <- glue("**---Manual adjustment required here---**")
+source_footnote_simd <- 
+  paste0("Source: Public Health Scotland quarterly dementia post-diagnostic ",
+        "support dataset. Data submissions from NHS Boards as at ", 
+        format(end_date, "%d %B %Y"), ".",
+        " Scottish Index of Multiple Deprivation (SIMD) 2020v2.")
+
+ interpretation_text <- glue("**---Manual adjustment required here---**")
 ```
 
 # Introduction
 This release by Public Health Scotland (PHS) reports on the Scottish Government’s Local Delivery Plan (LDP) standard that everyone newly diagnosed with dementia will be offered a minimum of one year’s post-diagnostic support, coordinated by an appropriately trained Link Worker, including the building of a person-centred support plan.
 Data are presented by financial year of diagnosis and this report presents finalised figures for `r revised_fy` and provisional figures for `r latest_fy` which are subject to some service users completing their support.
 
-The Scottish Government published their [third national dementia strategy](https://www.gov.scot/publications/scotlands-national-dementia-strategy-2017-2020/) in 2017. This included the commitment to extend and embed dementia post-diagnostic support. In order to effectively monitor the delivery of post-diagnostic support a national [local delivery plan (LDP) standard](https://www.gov.scot/publications/nhsscotland-performance-against-ldp-standards/pages/introduction/) was introduced for all people newly diagnosed with dementia to receive a minimum of one year’s post-diagnostic support. 
+The Scottish Government published their [new dementia strategy for Scotland: Everyone's
+Story](https://www.gov.scot/publications/scotlands-national-dementia-strategy-2017-2020/) in May 2023. This strategy builds on previous strategies and continues to recognise the importance of dementia post-diagnostic support and the outcomes for people living with dementia.
+
+In order to effectively monitor the delivery of post-diagnostic support a national [local delivery plan (LDP) standard](https://www.gov.scot/publications/nhsscotland-performance-against-ldp-standards/pages/introduction/) was introduced in January 2015 for all people newly diagnosed with dementia to receive a minimum of one year’s post-diagnostic support.
 
 The LDP standard is reported in two parts, each addressing a separate element to the standard:
 
@@ -615,13 +628,13 @@ the data presented in this report.
 # Main Points
 <Div custom-style = "Bullet 1">There were `r summary %>% filter(fy == latest_fy) %>% pull(referrals)` people diagnosed and referred for dementia post-diagnostic support in `r latest_fy`, compared to `r summary %>% filter(fy == revised_fy) %>% pull(referrals)` in `r revised_fy`. The effects of measures relating to the COVID-19 pandemic are likely to have contributed to this reduction.</Div>
 <Div custom-style = "Bullet 1">Of those referred in `r latest_fy` for post-diagnostic support, `r summary %>% filter(fy == latest_fy) %>% pull(year_perc)` received a minimum of one year's support. In `r revised_fy`, the percentage was `r summary %>% filter(fy == revised_fy) %>% pull(year_perc)`.</Div>
-<Div custom-style = "Table or chart caption">Percentage of referrals who received a minimum of one year’s post-diagnostic support by NHS Board; `r latest_fy`^1,2^</Div>
+<Div custom-style = "Table or chart caption">Percentage of referrals who received a minimum of one year’s post-diagnostic support by NHS Board; `r latest_fy`^1^</Div>
 
 
 <Div custom-style = "Figure_Style">
 ```{r fig-summary, echo= FALSE, fig.cap= `f2_alt_text`, out.width = 600}
 # Figure summary
-include_graphics(pub_figures_path(type = "c2"))
+include_graphics(get_pub_figures_path(type = "c2"))
 
 ```
 </Div>
@@ -638,7 +651,7 @@ include_graphics(pub_figures_path(type = "c2"))
 
 ## 1. Number and percentage of people estimated to be newly diagnosed with dementia who were referred for post-diagnostic support{#section1}
 
-This part of the LDP standard requires the number of referrals for post-diagnostic support to be compared against an estimated number of people newly diagnosed with dementia each year. Health Board level estimates of the number of people newly diagnosed with dementia (incidence) used for this calculation are from the paper [Estimated and Projected Diagnosis Rates for Dementia in Scotland 2014-2020](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/) published by the Scottish Government in 2016. 
+This part of the LDP standard requires the number of referrals for post-diagnostic support to be compared against an estimated number of people newly diagnosed with dementia each year. Health Board level estimates of the number of people newly diagnosed with dementia (incidence) used for this calculation are from the paper [Estimated and Projected Diagnosis Rates for Dementia in Scotland 2014-2020](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/) published by the Scottish Government in 2016. Estimates are used as follows: calendar year 2016 estimates for 2016/17, calendar year 2017 estimates for 2017/18, calendar year 2018 estimates for 2018/19, calendar year 2019 estimates for 2019/20 and calendar year 2020 estimates for 2020/21. For financial year 2021/22 and 2022/23 the rates referenced in this paper were used to create national, age specific rates of dementia incidence per 1,000 population which were then applied to the [National Records of Scotland (NRS) Mid-2021 and Mid-2022 Population Estimates](https://www.nrscotland.gov.uk/statistics-and-data/population-migration-and-households/) to obtain the incidence estimates. 
 
 Table 1 presents the number and percentage of people referred for dementia post-diagnostic support compared to the estimated number of people newly diagnosed with dementia in `r latest_fy` by NHS Board. 
 
@@ -682,7 +695,7 @@ Figure 1 presents the percentage of people referred for dementia post-diagnostic
 <Div custom-style = "Figure_Style">
 ```{r fig-1, echo= FALSE, fig.cap= `f1_alt_text`, out.width = 600}
 # Figure 1
-include_graphics(pub_figures_path(type = "c1"))
+include_graphics(get_pub_figures_path(type = "c1"))
 
 ```
 
@@ -705,7 +718,7 @@ inc_trend_table %>%
     values = c(health_board = "NHS Board")) %>% 
   # check here the number of columns in the table for next year. 
   # The 2:7 may need updating for the number of columns.
-  align(j = 2:7, align = "right", part = "body") %>%
+  align(j = 2:8, align = "right", part = "body") %>%
   set_table_properties(layout = "autofit") %>% 
   compose(
     j = ncol(inc_trend_table), part = "header",
@@ -719,15 +732,14 @@ inc_trend_table %>%
 
 <Div custom-style = "Footnote Text">
 1. `r source_footnote`
-2. `r prov_footnote`
-3. `r revised_footnote`
-4. `r incidence_footnote_trend`
+2. `r prov_revised_footnote`
+3. `r incidence_footnote_trend`
 </Div>
 
 
 `r inc_trend_text`
 
-## Number and percentage of people referred for dementia post-diagnostic support who received a minimum of one year’s support
+## 2. Number and percentage of people referred for dementia post-diagnostic support who received a minimum of one year’s support
 
 This part of LDP standard reports on the number of people referred for dementia post-diagnostic support who received a minimum of one year’s support. Figures presented in this section are available by NHS Board and Integration Authority area, and should be interpreted in conjunction with [section 1](#section1).
 
@@ -769,7 +781,7 @@ hb %>%
 4. `r interpret_footnote`
 </Div>
 
-`r interpretation_text`
+<!-- `r interpretation_text` -->
 
 `r text_hb`
 
@@ -778,7 +790,7 @@ hb %>%
 <Div custom-style = "Figure_Style">
 ```{r fig-2, echo=FALSE, fig.cap= `f2_alt_text`, out.width = 600}
 # Figure 2 
-include_graphics(pub_figures_path(type = "c2"))
+include_graphics(get_pub_figures_path(type = "c2"))
 
 ```
 
@@ -789,8 +801,6 @@ include_graphics(pub_figures_path(type = "c2"))
 3. `r method_footnote`
 4. `r interpret_footnote`
 </Div>
-
-<br>
 
 Table 4 presents the trend in the percentage of people referred for post-diagnostic support who received a minimum of one year’s support for financial years `r fy_in_pub[1]` to `r latest_fy` by NHS Board.
 
@@ -804,7 +814,7 @@ hb_trend_table  %>%
   set_header_labels(values = c(health_board = "NHS Board")) %>% 
   # check here the number of columns in the table for next year. 
   # The 2:7 may need updating for the number of columns.
-  align(j = 2:7, align = "right", part = "body") %>%
+  align(j = 2:8, align = "right", part = "body") %>%
   set_table_properties(layout = "autofit") %>% 
   compose(
     j = ncol(hb_trend_table), part = "header",
@@ -818,13 +828,13 @@ hb_trend_table  %>%
 
 <Div custom-style = "Footnote Text">
 1. `r source_footnote`
-2. `r prov_footnote`
-3. `r revised_footnote`
-4. `r method_footnote`
-5. `r interpret_footnote`
+2. `r prov_revised_footnote`
+3. `r method_footnote`
+4. `r interpret_footnote`
+5. `r a_city_footnote_hb`
 </Div>
 
-`r interpretation_text`
+<!-- `r interpretation_text` -->
 
 `r scot_trend_text`
 
@@ -864,7 +874,7 @@ ijb %>%
 4. `r interpret_footnote`
 </Div>
 
-`r interpretation_text`
+<!-- `r interpretation_text` -->
 
 `r text_ijb`
 
@@ -875,7 +885,7 @@ ijb %>%
 <Div custom-style = "Figure_Style">
 ```{r fig-3, echo=FALSE, fig.cap= `f3_alt_text`, out.width = 420}
 # Figure 3 
-include_graphics(pub_figures_path(type = "c3"))
+include_graphics(get_pub_figures_path(type = "c3"))
 
 ```
 
@@ -899,7 +909,7 @@ ijb_trend_table %>%
    flextable() %>% 
   ft_dementia_style() %>% 
   set_header_labels(values = c(ijb = "Integration Authority area")) %>% 
-  align(j = 2:7, align = "right", part = "body") %>%
+  align(j = 2:8, align = "right", part = "body") %>%
   set_table_properties(layout = "autofit") %>% 
   compose(
     j = ncol(ijb_trend_table), part = "header",
@@ -913,10 +923,10 @@ ijb_trend_table %>%
 
 <Div custom-style = "Footnote Text">
 1. `r source_footnote`
-2. `r prov_footnote`
-3. `r revised_footnote`
-4. `r method_footnote`
-5. `r interpret_footnote`
+2. `r prov_revised_footnote`
+3. `r method_footnote`
+4. `r interpret_footnote`
+5. `r a_city_footnote_ijb`
 </Div>
 
 \newpage
@@ -934,7 +944,7 @@ Figure 4 presents the age distribution of those referred for dementia post-diagn
 <Div custom-style = "Figure_Style">
 ```{r fig-4, echo=FALSE, fig.cap= `f4_alt_text`, out.width = 600}
 # Figure 4 
-include_graphics(pub_figures_path(type = "c4"))
+include_graphics(get_pub_figures_path(type = "c4"))
 ```
 
 <Div custom-style = "Footnote Text">
@@ -943,7 +953,8 @@ include_graphics(pub_figures_path(type = "c4"))
 3. `r age_footnote`
 </Div>
 
-`r interpretation_text`
+<!-- `r interpretation_text` -->
+
 `r age_referrals_text`
 
 Figure 5 presents the percentage of those referred for dementia post-diagnostic support who received a minimum of one year’s support by age group for `r latest_fy`. 
@@ -953,7 +964,7 @@ Figure 5 presents the percentage of those referred for dementia post-diagnostic 
 <Div custom-style = "Figure_Style">
 ```{r fig-5, echo=FALSE, fig.cap= f5_alt_text, out.width = 600}
 # Figure 5 
-include_graphics(pub_figures_path(type = "c5"))
+include_graphics(get_pub_figures_path(type = "c5"))
 ```
 
 <Div custom-style = "Footnote Text">
@@ -962,7 +973,8 @@ include_graphics(pub_figures_path(type = "c5"))
 3. `r age_footnote`
 </Div>
 
-`r interpretation_text`
+<!-- `r interpretation_text` -->
+
 `r age_ldp_text` 
 
 \newpage
@@ -976,17 +988,18 @@ Figure 6 presents the distribution of referrals for dementia post-diagnostic sup
 <Div custom-style = "Figure_Style">
 ```{r fig-6, echo=FALSE, fig.cap= `f6_alt_text`, out.width = 600}
 # Figure 6
-include_graphics(pub_figures_path(type = "c6"))
+include_graphics(get_pub_figures_path(type = "c6"))
 
 ```
 
 <Div custom-style = "Footnote Text">
-1. `r source_footnote`
+1. `r source_footnote_simd`
 2. `r prov_footnote`
 3. `r simd_footnote`
 </Div>
 
-`r interpretation_text`
+<!-- `r interpretation_text` -->
+
 `r simd_referrals_text`
 
 Figure 7 presents the percentage of those referred for dementia post-diagnostic support who received a minimum of one year’s support by deprivation quintile for `r latest_fy`. 
@@ -996,16 +1009,17 @@ Figure 7 presents the percentage of those referred for dementia post-diagnostic 
 <Div custom-style = "Figure_Style">
 ```{r fig-7, echo=FALSE, fig.cap= f7_alt_text, out.width = 600}
 # Figure 7 
-include_graphics(pub_figures_path(type = "c7"))
+include_graphics(get_pub_figures_path(type = "c7"))
 ```
 
 <Div custom-style = "Footnote Text">
-1. `r source_footnote`
+1. `r source_footnote_simd`
 2. `r prov_footnote`
 3. `r simd_footnote`
 </Div>
 
-`r interpretation_text`
+<!-- `r interpretation_text` -->
+
 `r simd_ldp_text`
 
 \newpage
@@ -1025,24 +1039,17 @@ Support commissioned by the Scottish Government that everyone newly diagnosed wi
 When a person receives a new diagnosis of dementia, a referral is made to a service that provides post-diagnostic support and allocates a named person to work alongside the individual and those close to them.
 
 **Deprivation Quintile**  
-The Scottish Index of Multiple Deprivation (SIMD) Quintiles. Deprivation for individuals is estimated from aggregate data derived from the census and other routine sources. These are used to estimate the deprivation of small geographical areas, called data zones. The Scottish Index of Multiple Deprivation (SIMD) has seven domains (income, employment, education, housing, health, crime, and geographical access) at data zone level, which have been combined into an overall index to pick out area concentrations of multiple deprivation. Data in this report are analysed by the ‘Scotland level’ Scottish Index of Multiple Deprivation population weighted quintiles. Each quintile consists of approximately 20% of the population living in Scotland, with deprivation quintile 1 indicating the 20% of the population living in the most deprived areas and deprivation quintile 5 the 20% of the population living in the least deprived areas.
+The Scottish Index of Multiple Deprivation (SIMD) Quintiles. Deprivation for individuals is estimated from aggregate data derived from the census and other routine sources. These are used to estimate the deprivation of small geographical areas, called data zones. [The Scottish Index of Multiple Deprivation (SIMD)](https://www.gov.scot/collections/scottish-index-of-multiple-deprivation-2020/) has seven domains (income, employment, education, housing, health, crime, and geographical access) at data zone level, which have been combined into an overall index to pick out area concentrations of multiple deprivation. Data in this report are analysed by the ‘Scotland level’ Scottish Index of Multiple Deprivation population weighted quintiles. Each quintile consists of approximately 20% of the population living in Scotland, with deprivation quintile 1 indicating the 20% of the population living in the most deprived areas and deprivation quintile 5 the 20% of the population living in the least deprived areas.
 
 \newpage
 
 # Contact
 **Zeg Ashraf, Principal Information Analyst**  
 Health & Social Care  
-0131 314 1737  
 [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
 
-**Jennifer Noall, Senior Information Analyst**  
+**Lee Truesdale, Senior Information Analyst**  
 Health & Social Care  
-0131 275 7220  
-[phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
-
-**Jennifer Thom, Information Analyst**  
-Health & Social Care  
-0131 275 1754  
 [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
 
 For all media enquiries please email [phs.comms@phs.scot](mailto:phs.comms@phs.scot) or call 0131 275 6105.
@@ -1137,10 +1144,10 @@ allowed NHS Tayside to improve on data reporting from 2019 onwards.
 ## Appendix 2 - Publication metadata
 
 **Publication title**  
-[Dementia Post-Diagnostic Support: Local Delivery Plan (LDP) standard - Figures to `r latest_fy`]
+Dementia Post-Diagnostic Support: Local Delivery Plan (LDP) standard - Figures to `r latest_fy`
 
 **Description**  
-[This publication reports on the [LDP standard](https://www.gov.scot/About/Performance/scotPerforms/NHSScotlandperformance/Dementia-LDP) that those people newly diagnosed with dementia should receive a minimum of one year's post-diagnostic support.]
+This publication reports on the [LDP standard](https://www.gov.scot/About/Performance/scotPerforms/NHSScotlandperformance/Dementia-LDP) that those people newly diagnosed with dementia should receive a minimum of one year's post-diagnostic support.
 
 **Theme**  
 Health and Social Care
@@ -1155,6 +1162,10 @@ PDF Report with Excel Tables
 Public Health Scotland (PHS) Dementia Post-diagnostic support data submission from NHS Boards
 
 [Estimated and Projected Diagnosis Rates for Dementia in Scotland: 2014-2020](https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/) 
+
+[Nationl Records of Scotland (NRS) Mid-year Population Estimates](https://www.nrscotland.gov.uk/statistics-and-data/population-migration-and-households/
+
+[Scottish Index of Multiple Deprivation (SIMD) 2020](https://www.gov.scot/collections/scottish-index-of-multiple-deprivation-2020/)
 
 **Date that data are acquired**  
 Public Health Scotland (PHS) Dementia Post-diagnostic support data submission from NHS Boards as at `r format(end_date, "%d %B %Y")`
@@ -1222,7 +1233,7 @@ The [PHS protocol on Statistical Disclosure](https://beta.isdscotland.org/media/
 Official statistics
 
 **UK Statistics Authority assessment**  
-[N/A]
+N/A
 
 **Last published**  
 `r format(last_pub_date, "%d %B %Y")`
